# zkvm-host

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile_Risc0_2.3.1  README.md  example_request.json  example_response copy.json  example_response.json  example_response_2.json  testing.md
examples/: chained_verification.bpmn  composed_verification.bpmn  single_step_verification.bpmn
host/: Cargo.toml  build.rs
host/proto/: poam.proto  streaming.proto
host/src/: lib.rs  main.rs  proof_streaming_service.rs  tests.rs  verifiable_processing_service.rs
host/src/proof_streaming_service/: streaming_helpers.rs
host/src/verifiable_processing_service/: call_methods.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
operations/src/: lib.rs
poam_helper/: Cargo.toml
poam_helper/src/: lib.rs
projects/rules_new/: README.md  test.yaml
projects/rules_new/host/: Cargo.toml  build.rs
projects/rules_new/host/proto/: poam.proto
projects/rules_new/host/src/: lib.rs  main.rs
projects/rules_new/methods/: Cargo.toml
projects/rules_new/methods/guest/: Cargo.toml
projects/rules_new/operations/: Cargo.toml
projects/rules_new/operations/src/: lib.rs
projects/rules_new/rules/: Cargo.toml  rule.yml  rule1.yml  rules.json
projects/rules_new/rules/src/: conformance.rs  lib.rs
projects/rules_new/rules/tests/: rule_tests.rs
projects/rules_new/test_data/: prrof_response.json
rules/src/: conformance.rs  event_filter.rs  lib.rs
rules/tests/: rule_tests.rs
test_data/: composition_request.json
