[package]
name = "host"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.8.3"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "2.3.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0.0"
operations = { path = "../operations" }
prost = "0.11.9"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
bincode = "1.3.3"
tonic = "0.8.3"
serde_bytes = "0.11"
once_cell = "1.20.2"
poam_helper = {path="../poam_helper"}
tokio-stream = "0.1.17"
sha2 = "0.10"
futures = "0.3.31"

[features]
metal = ["risc0-zkvm/metal"]
