[package]
name = "risczero_methods"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2.0", default-features = false, features = ['std'] }
rules = {path = "../../rules"}
operations = {path = "../../operations"}
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
qfilter = { version = "0.2.1", features = ['serde'] }
