[package]
name = "risczero_methods"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "2.3.1", default-features = false, features = ['std'] }
operations = {path = "../../operations"}
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
poam_helper = {path = "../../poam_helper"}