[package]
name = "host"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.11"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.0.5" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
anyhow = "1.0.0"
operations = { path = "../operations" }
prost = "0.12"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
bincode = "1.3.3"
tonic = "0.11"

